DERBY-6856: Make it possible to build Derby using JDK 9
As a follow-up to revision 1742756, and a slight improvement to it,
use Integer.valueOf(Types.BOOLEAN) rather than new Integer(Types.BOOLEAN)
which avoids an unnecessary object allocation.



git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1743093 13f79535-47bb-0310-9956-ffa450edef68